# Hackathon-AI-Book

./: .gitignore  .npmignore  package-lock.json  package.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: chat.py
backend/src/core/: config.py
backend/src/database/: postgres.py  qdrant.py
backend/src/models/: rag.py
backend/src/schemas/: chat.py
backend/src/utils/: embeddings.py  prompts.py
docs/hardware/: simulation-workstation.md
docs/introduction/: intro.md  learning-outcomes.md  why-physical-ai-matters.md
docs/module-1-ros2/: python-ros-bridge.md  ros-architecture.md  urdf-for-humanoids.md
docs/module-3-nvidia-isaac/: sim-to-real.md  summary.md  synthetic-data-perception.md  vslam-navigation.md  what-is-isaac.md
docs/module-4-vla-capstone/: capstone-summary.md  capstone.md  llm-planning.md  vla-loop.md  voice-to-action.md
history/prompts/001-humanoid-robotics-book/: 002-generate-tasks-for-book-writing.tasks.prompt.md  003-implement-book-content-and-docusaurus-integration.implement.prompt.md
history/prompts/002-rag-chatbot/: 001-refine-rag-chatbot-specification.refactor.prompt.md  002-generate-actionable-tasks-for-rag-chatbot.tasks.prompt.md  003-generate-implementation-high-level-plan.implement.prompt.md  (+1 more)
my-Book/: docusaurus.config.ts  sidebars.ts
my-Book/docs/hardware/: edge-ai-kit.md  (+3 more)
specs/001-humanoid-robotics-book/: data-model.md  plan.md  research.md  tasks.md
specs/002-rag-chatbot/: implement.md  spec.md  tasks.md
(+39 files in other folders)
